--- a/etl_athena_uc/requirements.txt
+++ b/etl_athena_uc/requirements.txt
@@ -1,4 +1,4 @@
-athena-mvsh @ git+https://github.com/Marcus-Holanda777/athena-mvsh.git@245b204a74bbc587655b368b6b3cfc3e78cf6887
+athena-mvsh==0.0.7
 boto3==1.34.150
 botocore==1.34.150
 cachetools==5.4.0
